--- a/index.html
+++ b/index.html
@@ -462,7 +462,7 @@
                         <div class="team-item bg-light rounded">
                             <div class="text-center border-bottom p-4">
                                 <img class="img-fluid rounded-circle mb-4" src="img/team-1.jpg" alt="">
-                                <h5>John Doe</h5>
+                                <h5>Özgür Özbek</h5>
                                 <span>CEO & Founder</span>
                             </div>
                             <div class="d-flex justify-content-center p-4">
