--- a/index.html
+++ b/index.html
@@ -476,7 +476,7 @@
                     <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                         <div class="team-item bg-light rounded">
                             <div class="text-center border-bottom p-4">
-                                <img class="img-fluid rounded-circle mb-4" src="img/vengo.jpg" alt="">
+                                <img class="img-fluid rounded-circle mb-4" src="" alt="">
                                 <h5>Vengo Montana</h5>
                                 <span>Photographer & CEO-Founder</span>
                             </div>
